WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40257
[Qt] PageClientQt.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40257
Summary
[Qt] PageClientQt.h has coding-style errors
Anders Bakken
Reported
2010-06-07 12:57:55 PDT
[Qt] PageClientQt.h has coding-style errors
Attachments
Patch
(1.26 KB, patch)
2010-06-07 12:58 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 12:58:18 PDT
Created
attachment 58075
[details]
Patch
WebKit Commit Bot
Comment 2
2010-06-09 19:13:46 PDT
Comment on
attachment 58075
[details]
Patch Clearing flags on attachment: 58075 Committed
r60929
: <
http://trac.webkit.org/changeset/60929
>
WebKit Commit Bot
Comment 3
2010-06-09 19:13:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug