2010-06-09  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        [Qt] PageClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40257

        * WebCoreSupport/PageClientQt.h:

Canonical link: https://commits.webkit.org/51944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60929 268f45cc-cd09-0410-ab3c-d52691b4dbfc